--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,5 +1,5 @@
 #navbar {
-    font-family: 'Chelsea Market', cursive, sans-serif;
+    font-family: 'Chelsea Market', cursive;
     font-size: 30px;
     background-color: #F7A4A4;
     display: flex;
