--- a/src/container/Footer/Footer.css
+++ b/src/container/Footer/Footer.css
@@ -72,6 +72,7 @@ h3 {
     text-transform: uppercase;
     font-size: 20px;
     background-color: #B6E2A1;
+    border-color: black;
 }
 
 #subscribe:hover {
@@ -92,3 +93,15 @@ h3 {
     text-transform: uppercase;
     font-size: 20px;
 }
+
+/* Mobile Design CSS */
+
+@media (max-width: 768px) {
+    .footer-bottom {
+        flex-direction: column;
+        justify-content: center;
+    }
+    .footer-links {
+        flex-direction: column;
+    }
+  }
