--- a/src/container/Footer/Footer.css
+++ b/src/container/Footer/Footer.css
@@ -37,6 +37,7 @@ h3 {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    padding: 0 0 80px;
 }
 
 /* Flex box newletter area so it's responsive */
