--- a/src/container/Footer/Footer.css
+++ b/src/container/Footer/Footer.css
@@ -40,8 +40,6 @@ h3 {
     padding: 0 0 80px;
 }
 
-/* Flex box newletter area so it's responsive */
-
 /* Top footer */
 .footer-top {
     display: flex;
@@ -74,6 +72,7 @@ h3 {
     font-size: 20px;
     background-color: #B6E2A1;
     border-color: black;
+    color: black;
 }
 
 #subscribe:hover {
