update footer and contact form
update footer.css's ids/classes so that contact.css doesn't take over the footer.css styles

--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -8,7 +8,7 @@ h2 {
     text-align: center;
 }
 
-p {
+#description {
     font-family: 'Piazzolla', serif;
     font-size: 15px;
     padding: 0 300px;
