--- a/src/container/Footer/Footer.css
+++ b/src/container/Footer/Footer.css
@@ -17,7 +17,7 @@ h3 {
     text-transform: uppercase;
     font-size: 15px;
     display: flex;
-    justify-content: flex-end; 
+    justify-content: flex-end;
 }
 
 .footer-link-text {
@@ -33,13 +33,14 @@ h3 {
     padding: 0 10px;
 }
 
-.footer-bottom {
+ .footer-bottom {
     display: flex;
-    justify-content: space-around;
-    align-items: center;
+    justify-content: space-evenly;
+    align-items: flex-start; 
     /* Fixed the extra white spacing by adding padding at the bottom */
     padding: 0 0 80px;
-}
+    margin: auto;
+} 
 
 /* Top footer */
 .footer-top {
@@ -59,7 +60,7 @@ h3 {
     margin: 5px;
 }
 
-#email {
+#subscribe-email {
     width: 450px;
     font-family: 'Piazzolla', serif;
     text-transform: lowercase;
@@ -99,10 +100,28 @@ h3 {
 
 @media (max-width: 768px) {
     .footer-bottom {
-        flex-direction: column;
+        display: unset;
+    }
+    .social-media {
         justify-content: center;
     }
     .footer-links {
+        justify-content: center;
+        font-size: 10px;
+    }
+    .footer-top {
+        display: unset;
+    }
+    .newsletter {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        margin: auto;
+    }
+    .contact {
+        display: flex;
+        justify-content: center;
         flex-direction: column;
     }
   }
+  
