update css on footer and header and button so it's not affected by bootstrap css, trying to use bootstrap css to add a drop down list for bookings

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,12 +1,23 @@
-#navbar {
+.navbar {
     font-family: 'Chelsea Market', cursive;
     font-size: 25px;
+    display: flex;
+    justify-content: center;
     text-align: center;
     background-color: #F7A4A4;
     display: flex;
     justify-content: center;
     padding: 50px;
     overflow: hidden;
+}
+
+.navbar a {
+    color: black;
+    text-decoration: none;
+}
+
+.navbar a:hover {
+    color: #FEBE8C;
 }
 
 #nav-home {
@@ -21,16 +32,12 @@
     padding: 20px;
 }
 
-ul {
+.navbar-list {
     list-style: none;
 }
 
-li {
+.navbar-items {
     float: left;
-}
-
-#navbar a:hover {
-    color: #FEBE8C;
 }
 
 /* Mobile Design CSS */
