--- a/src/container/Footer/Footer.css
+++ b/src/container/Footer/Footer.css
@@ -4,11 +4,21 @@
     background-color: #B6E2A1;
 }
 
+.footer a {
+    color: black;
+    text-decoration: none;
+}
+
+.footer a:hover {
+    color: #F5F5F5;
+}
+
 h3 {
     font-family: 'Chelsea Market', cursive;
     text-transform: uppercase;
     font-size: 20px;
 }
+
 
 /* Bottom footer  */
 
@@ -33,7 +43,7 @@ h3 {
     padding: 0 10px;
 }
 
- .footer-bottom {
+.footer-bottom {
     display: flex;
     justify-content: space-evenly;
     align-items: flex-start; 
