--- a/src/container/Header/Button.css
+++ b/src/container/Header/Button.css
@@ -4,7 +4,7 @@
     text-align: center;
 }
   
-button {
+#lucky-draw {
     display: inline-block;
     background-color: #FEBE8C;
     border-color: #FEBE8C;
@@ -17,7 +17,7 @@ button {
     border-color: black;
 }
 
-button:hover {
+#lucky-draw:hover {
     background-color: #B6E2A1;
     border-color: black;
 }
