--- a/src/container/Header/Header.css
+++ b/src/container/Header/Header.css
@@ -6,7 +6,7 @@
     text-align: center; 
 }
 
-h1 {
+#header-text {
     font-family: 'Chelsea Market', cursive;
     font-size: 50px;
     color: white;
