make button file a prop so it can be reused in other parts of the app

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,3 +1,4 @@
+/* Used CSS from W3 Schools to make this navbar and adjusted colours/fonts */
 /* Navbar container */
 .navbar {
     overflow: hidden;
