--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,4 +1,5 @@
-/* Used CSS from W3 Schools to make this navbar and adjusted colours/fonts */
+/* Used CSS from W3 Schools to make this navbar and adjusted colours and fonts */
+
 /* Navbar container */
 .navbar {
     overflow: hidden;
