--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,7 +1,7 @@
 /* Used CSS from W3 Schools to make this navbar and adjusted colours and fonts */
 
 /* Navbar container */
-.navbar {
+.my-navbar {
     overflow: hidden;
     background-color: #F7A4A4;
     font-family: 'Chelsea Market', cursive;
@@ -11,7 +11,7 @@
 }
   
 /* Links inside the navbar */
-.navbar a {
+.my-navbar a {
     float: left;
     font-size: 20px;
     color: black;
@@ -21,13 +21,13 @@
 }
   
 /* The dropdown container */
-.dropdown {
+.my-dropdown {
     float: left;
     overflow: hidden;
 }
   
 /* Dropdown button */
-.dropdown .dropbtn {
+.my-dropdown .my-dropbtn {
     font-size: 20px;
     border: none;
     outline: none;
@@ -39,12 +39,13 @@
 }
   
 /* Add an orangebackground color to navbar links on hover */
-.navbar a:hover, .dropdown:hover .dropbtn {
+.my-navbar a:hover, .dropdown:hover .dropbtn {
     background-color: #FEBE8C;
+    color: black;
 }
   
 /* Dropdown content (hidden by default) */
-.dropdown-content {
+.my-dropdown-content {
     display: none;
     position: absolute;
     background-color: #F7A4A4;
@@ -54,7 +55,7 @@
 }
   
 /* Links inside the dropdown */
-.dropdown-content a {
+.my-dropdown-content a {
     float: none;
     color: black;
     padding: 12px 16px;
@@ -64,12 +65,12 @@
 }
   
 /* Add a grey background color to dropdown links on hover */
-.dropdown-content a:hover {
+.my-dropdown-content a:hover {
     background-color: #FEBE8C;
 }
   
 /* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {
+.my-dropdown:hover .my-dropdown-content {
     display: block;
 }
 
