--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -42,6 +42,11 @@ h2 {
     margin: 10px auto 0;
 }
 
+#submit-btn:hover {
+    background-color: #B6E2A1;
+    border-color: #B6E2A1;
+}
+
 /* Mobile Design CSS  */
 @media (max-width: 768px) {
     #description {
