--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -13,12 +13,11 @@
     color: #F5F5F5;
 }
 
-h3 {
+.footer-headings {
     font-family: 'Chelsea Market', cursive;
     text-transform: uppercase;
     font-size: 20px;
 }
-
 
 /* Bottom footer  */
 
@@ -83,12 +82,6 @@ h3 {
     font-family: 'Piazzolla', serif;
     text-transform: lowercase;
     font-size: 15px;
-}
-
-.contact-us {
-    font-family: 'Chelsea Market', cursive;
-    text-transform: uppercase;
-    font-size: 20px;
 }
 
 /* Mobile Design CSS */
