update about and queuing css

--- a/src/container/AboutUs/AboutUs.css
+++ b/src/container/AboutUs/AboutUs.css
@@ -6,6 +6,7 @@
 #about-us-heading {
     text-align: center;
     font-size: 40px;
+    font-family: 'Chelsea Market', cursive;
 }
 
 #about-us-photo {
